--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,6 +22,7 @@ build_script:
 
 test_script:
   - npm run lint && npm test  # скрипт тестирования
+  - npm test -- --detectOpenHandles
 
 deploy_script:  # скрипт развёртывания
 
