--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "scripts": {
     "lint": "eslint . --fix",
     "build": "webpack",
-    "test": "jest --passWithNoTests"
+    "test": "jest --detectOpenHandles"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.24.5",
-    "@babel/core": "^7.24.5",
-    "@babel/preset-env": "^7.24.5",
+    "@babel/core": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
+    "@testing-library/dom": "^10.1.0",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
+    "bootstrap": "^5.3.3",
     "css-loader": "^7.1.1",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "eslint": "^8.57.0",
@@ -25,20 +28,22 @@
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-puppeteer": "^10.0.1",
+    "jest-puppeteer": "^10.0.1",
+    "jsdom": "^24.1.0",
     "mini-css-extract-plugin": "^2.9.0",
     "prettier": "^3.2.5",
+    "puppeteer": "^22.10.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.3",
     "core-js": "^3.37.1",
     "eslint-plugin-jest": "^28.5.0",
-    "puppeteer": "^22.10.0"
-  },
-  "jest": {
-    "testEnvironment": "jsdom"
+    "text-encoding": "^0.7.0",
+    "ws": "^8.17.0"
   }
 }
